Fix getting notified twice after subscribe to notifications and call readValue

The CL:
https://codereview.chromium.org/2718583002
adds code that sends an event on the readValue callback. So if subscribes
to notifications and then calls readValue, will get notified twice. This
CL fixes this issue.

BUG=697702

Review-Url: https://codereview.chromium.org/2728623004
Cr-Commit-Position: refs/heads/master@{#455652}

Former-commit-id: 50cead395565600cca22d02bf404ea1fc37e3897